2019-03-24  Markus Gans  <guru.mail@muenster.de>
	* Add a "scroll view" chapter to the first steps document

2019-02-28  Markus Gans  <guru.mail@muenster.de>
	* Add an lambda expression callback example to the first steps document

2019-02-24  Markus Gans  <guru.mail@muenster.de>
	* FLineEdit now has the ability to define a character input filter 
	  via regular expression (regex)
	* Now FLineEdit can define a maximum character length for the input
	* The cursor position can now be set directly in FLineEdit
	* Added the 7-segment example to demonstrate the use of FTermBuffer
	  and FLineEdit input filters

2019-02-07  Markus Gans  <guru.mail@muenster.de>
	* Add a "dynamic layout" chapter into the first steps document

2019-01-30  Markus Gans  <guru.mail@muenster.de>
	* Printing an FColorPair object can change the foreground and 
	  background color

2019-01-27  Markus Gans  <guru.mail@muenster.de>
	* The print command can now have an FPoint object as a parameter 
	  to set the cursor position
	* Refactoring of the FProgressbar drawing methods

2019-01-24  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of some methods in FVTerm and FDialog

2019-01-21  Markus Gans  <guru.mail@muenster.de>
	* More accurate interfaces through the strict use of FPoint() 
	  and FSize()

2019-01-16  Markus Gans  <guru.mail@muenster.de>
	* New class FSize for storing dimensions

2019-01-12  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FFileDialog::fileOpenChooser
	* Refactoring FFileDialog::fileSaveChooser
	* Refactoring FListBox::init()
	* Refactoring FListView::init()
	* Refactoring FTextView::init()
	* Refactoring FTermXTerminal::resetXTermForeground()
	* Refactoring FTermXTerminal::resetXTermBackground()
	* Refactoring FTermXTerminal::resetXTermCursorColor()
	* Refactoring FTermXTerminal::resetXTermMouseForeground()
	* Refactoring FTermXTerminal::resetXTermMouseBackground()
	* Refactoring FTermXTerminal::resetXTermHighlightBackground()
